...
    showAlert(title, message);
  }, []);

  return (
    <ScreenBackground>
      <SafeAreaView
        testID="settings-screen"
        accessibilityLabel="settings-screen"
        style={layout.screenContent}
        edges={["top"]}
      >
        <ScrollView
          style={layout.screenContent}
...
